# wifi-switcher

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  compile  config.h.in  configure  configure.ac
data/: Makefile.am  Makefile.in  wifi-switcher.desktop  wifi-switcher.sudoers
debian/: README.debian  changelog  control  copyright  crontab.ex  inetd.conf.ex  info.ex  init.d.ex  manpage.1.ex  menu.ex  rules  watch.ex  wifi-switcher.install  wifi-switcher.postinst  wifi-switcher.prerm
m4/: ChangeLog
po/: ChangeLog  Makevars
src/: Makefile.am  Makefile.in  wifi-switcher-show-status.patch  wifi-switcher-statusbar.c  wifi-switcher-statusbar.h  wifi.sh
